--- a/ClientApp/app/components/login/login.component.html
+++ b/ClientApp/app/components/login/login.component.html
@@ -1,5 +1,28 @@
-﻿<div class='container-fluid'>
-    <div class="col-sm-8 col-sm-offset-2">
-        <h1>Login component</h1>
+﻿<legend>Login</legend>
+<form class="form-horizontal" (submit)="login()">
+    
+    <div class="form-group">
+        <label class="col-sm-2 control-label" for="email">Email</label>
+        <div class="col-sm-10">
+            <input type="text" name="email" [(ngModel)]="newUser.Email" />
+        </div>
     </div>
-</div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label" for="password">Password</label>
+        <div class="col-sm-10">
+            <input type="text" name="password" [(ngModel)]="newUser.Password" />
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <a [routerLink]="['/register']">Register Here</a>
+        </div>
+    </div>
+</form>
