--- a/ClientApp/app/components/register/register.component.html
+++ b/ClientApp/app/components/register/register.component.html
@@ -1,5 +1,42 @@
-﻿<div class='container-fluid'>
-    <div class="col-sm-8 col-sm-offset-2">
-        <h1>Register component</h1>
+﻿
+<legend>Register</legend>
+<form class="form-horizontal" (submit)="register()">
+    <div class="form-group">
+        <label class="col-sm-2 control-label" for="email">Email</label>
+        <div class="col-sm-10">
+            <input type="text" name="email" [(ngModel)]="newUser.Email" />
+        </div>
     </div>
-</div>
+
+    <div class="form-group">
+        <label class="col-sm-2 control-label" for="firstName">First Name</label>
+        <div class="col-sm-10">
+
+            <input type="text" name="firstname" [(ngModel)]="newUser.Firstname" />
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-2 control-label" for="lastname">Last Name</label>
+        <div class="col-sm-10">
+
+            <input type="text" name="lastname" [(ngModel)]="newUser.Lastname" />
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="col-sm-2 control-label" for="password">Password</label>
+        <div class="col-sm-10">
+
+            <input type="text" name="password" [(ngModel)]="newUser.Password" />
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-primary">Register</button>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <a [routerLink]="['/login']">Log in here</a>
+        </div>
+    </div>
+</form>
