--- a/ClientApp/app/components/login/login.component.html
+++ b/ClientApp/app/components/login/login.component.html
@@ -1,23 +1,29 @@
 ﻿<legend>Login</legend>
-<form class="form-horizontal" (submit)="login()">
-    
+
+<form [formGroup]="loginForm" class="form-horizontal" (submit)="login()" novalidate> 
     <div class="form-group">
         <label class="col-sm-2 control-label" for="email">Email</label>
         <div class="col-sm-10">
-            <input type="text" name="email" [(ngModel)]="newUser.Email" />
+            <input type="text" class="form-control" formControlName="email"  placeholder="Enter Email" />
         </div>
+    </div>
+    <div *ngIf="formError.formErrors.email" class="alert alert-danger">
+        {{ formError.formErrors.email }}
     </div>
 
     <div class="form-group">
         <label class="col-sm-2 control-label" for="password">Password</label>
         <div class="col-sm-10">
-            <input type="text" name="password" [(ngModel)]="newUser.Password" />
+            <input type="text" class="form-control" formControlName="password" placeholder="Enter Password" />
         </div>
+    </div>
+    <div *ngIf="formError.formErrors.password" class="alert alert-danger">
+        {{ formError.formErrors.password }}
     </div>
 
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Login</button>
+            <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Login</button>
         </div>
     </div>
     <div class="form-group">
