--- a/ClientApp/app/components/register/register.component.html
+++ b/ClientApp/app/components/register/register.component.html
@@ -1,39 +1,53 @@
 ﻿
 <legend>Register</legend>
-<form class="form-horizontal" (submit)="register()">
+
+<form [formGroup]="registrationForm" class="form-horizontal" (submit)="register()" novalidate>
     <div class="form-group">
         <label class="col-sm-2 control-label" for="email">Email</label>
         <div class="col-sm-10">
-            <input type="text" name="email" [(ngModel)]="newUser.Email" />
+            <input type="text" class="form-control" formControlName="email" placeholder="Enter Email" id="email"/>
         </div>
+    </div>
+    <div *ngIf="formError.formErrors.email" class="alert alert-danger">
+        {{ formError.formErrors.email }}
     </div>
 
     <div class="form-group">
         <label class="col-sm-2 control-label" for="firstName">First Name</label>
         <div class="col-sm-10">
-
-            <input type="text" name="firstname" [(ngModel)]="newUser.Firstname" />
+            <input type="text" class="form-control" formControlName="firstName"  placeholder="Enter First name" id="firstName" />
         </div>
     </div>
+    <div *ngIf="formError.formErrors.firstName" class="alert alert-danger">
+        {{ formError.formErrors.firstName }}
+    </div>
+
     <div class="form-group">
-        <label class="col-sm-2 control-label" for="lastname">Last Name</label>
+        <label class="col-sm-2 control-label" for="lastame">Last Name</label>
         <div class="col-sm-10">
-
-            <input type="text" name="lastname" [(ngModel)]="newUser.Lastname" />
+            <input type="text" class="form-control" formControlName="lastName" placeholder="Enter Last name" id="lastName" />
         </div>
     </div>
+    <div *ngIf="formError.formErrors.lastName" class="alert alert-danger">
+        {{ formError.formErrors.lastName }}
+    </div>
+
     <div class="form-group">
         <label class="col-sm-2 control-label" for="password">Password</label>
         <div class="col-sm-10">
-
-            <input type="text" name="password" [(ngModel)]="newUser.Password" />
+            <input type="text" class="form-control" formControlName="password"  placeholder="Enter Password" id="password"/>
         </div>
     </div>
+    <div *ngIf="formError.formErrors.password" class="alert alert-danger">
+        {{ formError.formErrors.password }}
+    </div>
+
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-primary" [disabled]="registrationForm.invalid" >Register</button>
         </div>
     </div>
+
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
             <a [routerLink]="['/login']">Log in here</a>
