--- a/ClientApp/app/components/account/account.component.html
+++ b/ClientApp/app/components/account/account.component.html
@@ -1,5 +1,3 @@
 ﻿<div class='container-fluid'>
-    <div class="col-sm-8 col-sm-offset-2">
-        <h1>Account component</h1>
-    </div>
 </div>
+<h3>AccountPage</h3>
