--- a/ClientApp/app/components/home/home.component.html
+++ b/ClientApp/app/components/home/home.component.html
@@ -1,5 +1,4 @@
 <div class='container-fluid'>
-    <div class="col-sm-8 col-sm-offset-2">
-        <h1>Home component</h1>
-    </div>
 </div>
+
+<h1>HomeComponent</h1>
