--- a/ClientApp/app/components/login/login.component.html
+++ b/ClientApp/app/components/login/login.component.html
@@ -14,7 +14,7 @@
     <div class="form-group">
         <label class="col-sm-2 control-label" for="password">Password</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" formControlName="password" placeholder="Enter Password" />
+            <input type="password" class="form-control" formControlName="password" placeholder="Enter Password" />
         </div>
     </div>
     <div *ngIf="formError.formErrors.password" class="alert alert-danger">
