--- a/ClientApp/app/components/register/register.component.html
+++ b/ClientApp/app/components/register/register.component.html
@@ -35,7 +35,7 @@
     <div class="form-group">
         <label class="col-sm-2 control-label" for="password">Password</label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" formControlName="password"  placeholder="Enter Password" id="password"/>
+            <input type="password" class="form-control" formControlName="password"  placeholder="Enter Password" id="password"/>
         </div>
     </div>
     <div *ngIf="formError.formErrors.password" class="alert alert-danger">
